Smaller resolution photos and fixed brother alignment issues

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -124,11 +124,11 @@
 		}
 
 	footer > :last-child {
-		margin-bottom: 0;
+		margin-bottom: 3em;
 	}
 
 	footer.major {
-		padding-top: 3em;
+		padding-top: 0em;
 	}
 
 /* Form */
@@ -762,7 +762,7 @@
 /* Footer */
 
 	#footer {
-		padding: 6em 0 2em 0;
+		padding: 3em 0 0em 0;
 		text-align: center;
 		color: white;
 	}
@@ -783,7 +783,7 @@
 		}
 
 		#footer .copyright {
-			margin-top: 3em;
+			margin-top: 0em;
 			text-align: center;
 		}
 
@@ -793,7 +793,7 @@
 		position: relative;
 		text-transform: uppercase;
 		text-align: center;
-		padding: 3em 0em 3em 0em;
+		padding: 0em 0em 0em 0em;
 		color: inherit;
 		opacity: .40;
 	}
